softforce/core/objects/Softrig_Auth_Settings__mdt/Softrig_Auth_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Softrig Auth Settings</label>
    <pluralLabel>Softrig Auth Settings</pluralLabel>
</CustomObject>