softforce/core/objects/Softrig_Auth_Settings__mdt/fields/Redirect_Url__c.field-meta.xml
<CustomField>
    <fullName>Redirect_Url__c</fullName>
    <label>Redirect Url</label>
    <type>Url</type>
</CustomField>