softforce/core/objects/Softrig_Auth_Settings__mdt/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <label>Scope</label>
    <type>TextArea</type>
</CustomField>