softforce/core/objects/Softrig_Auth_Settings__mdt/fields/Token_Url__c.field-meta.xml
<CustomField>
    <fullName>Token_Url__c</fullName>
    <label>Token Url</label>
    <type>Url</type>
</CustomField>